[package]
name = "gravity"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "process", "fs", "time"] }
anyhow = "1"
v8 = "0.106.0"
dotenvy = "0.15"
base64 = "0.21"
regex = "1.10"
libloading = "0.8"
walkdir = "2"
crossbeam = "0.8.4"
dashmap = "6.1.0"
bytes = "1.11.0"
smallvec = "1.15.1"
num_cpus = "1.17.0"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
futures-util = "0.3.30"
mimalloc = { version = "0.1", default-features = false }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "gzip", "brotli", "blocking"] }
tar = "0.4"
flate2 = "1.0"

[lib]
name = "gravity"
path = "src/lib.rs"

[[bin]]
name = "tgrv"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
