
[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dotenv = "0.15.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "process"] }
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
anyhow = "1"
boa_engine = "0.21.0"
dotenvy = "0.15"
